fixed about links hovers and image wrap issue (now have middle image size issue)

--- a/static/about.css
+++ b/static/about.css
@@ -1,5 +1,3 @@
-
-
 .nav.navbar-nav.navbar-right li a{
   color: white;
 }
@@ -47,4 +45,8 @@ a:hover{
 .navbar-default 
 {
   background-color: black;
+}
+
+a:hover.linkhover {
+  color: inherit;
 }
